src/lisp/bnf.txt
<program>     ::= { <expr> }

<expr>        ::= <atom>
               | <list>
               | <quoted>

<atom>        ::= <integer>
               | <float>
               | <boolean>
               | <symbol>

<list>        ::= "(" { <expr> } ")"

<quoted>      ::= "'" <expr>   ; e.g., '(1 2 3)

<integer>     ::= <sign>? <digit> { <digit> }

<float>       ::= <sign>? <digit> { <digit> } "." <digit> { <digit> }

<boolean>     ::= "#t" | "#f"

<symbol>      ::= <identifier> ; excluding reserved <keyword>s

<identifier>  ::= <letter> { <letter> | <digit> | <special> }

<sign>        ::= "+" | "-"

<digit>       ::= "0".."9"
<letter>      ::= "a".."z" | "A".."Z"
<special>     ::= "+" | "-" | "*" | "/" | "!" | "?" | "=" | "<" | ">" | "_"

<keyword>     ::= "define"
               | "lambda"
               | "if"
               | "let"
               | "begin"
               | "cond"
               | "and"
               | "or"
               | "set!"
               | "quote"
